[metadata]
name = predk53
author = Benjamin Kiessling
author-email = mittagessen@l.unchti.me
summary = darknet53 for pytorch
description-file = README.rst
license = Apache
classifier =
    Development Status :: 1 - Alpha
        Environment :: Console
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6

[bdist_wheel]
universal = 1

[files]
packages = predk53

[entry_points]
console_scripts =
    predk53 = predk53.main:cli
